# namr

./: .env.example  .gitignore  README.md  pyproject.toml  strava-auto-renamer-plan.md
deploy/: namr-poll.service  namr-poll.timer  namr.service
src/namr/: backfill.py  cli.py  config.py  db.py  detector.py  enrich.py  generator.py  logging_setup.py  oauth_cli.py  pipeline.py  rollback.py  strava.py
tests/: test_detector.py  test_footer.py  test_generator_validate.py  test_summarizers.py
